# --Cloud

./: .gitignore  App.tsx  README.md  VPU_Demonstration.ipynb  index.html  main.py  metadata.json  package.json  pyproject.toml  types.ts
components/: ApiDashboard.tsx  MatrixCanvas.tsx  PerformanceChart.tsx  TerminalLog.tsx
phi-cloud/: Dockerfile
phi-cloud/backend/: main.py  requirements.txt
phi-cloud/backend/core/: physics.py
phi-cloud/frontend/: app.js  index.html
services/: geminiService.ts
src/phi_cloud/: .gitignore  docker-compose.yml
src/phi_cloud/backend/: main.py  requirements.txt
src/phi_cloud/backend/core/: jobs.py
src/phi_cloud/backend/tests/: test_main.py
src/phi_cloud/frontend/: compiler.html  compiler.js  style.css
src/phi_cloud_core/: vpu.py
wave_computer/: components.py  control.py  demos.py  memory.py  programs.py
