[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-cloud-project"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "scipy",
    "python-multipart",
    "pydantic",
    "matplotlib",
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
